[package]
name = "prescurve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.6"
log = "0.4.22"
num-traits = "0.2.18"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.2"
# thiserror = "1.0.49"

[[bin]]
name = "prescurve-backlight"
path = "src/bin/backlight.rs"

[[bin]]
name = "rewrite"
path = "src/bin/rewrite.rs"
