[package]
name = "prescurve"
version = "0.10.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive", "cargo"] }
ctrlc = "3.4.5"
env_logger = "0.11.7"
industrial-io = "0.6.0"
log = "0.4.26"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
